Center page wrapper and ensure it keeps the correct width. Fix overflow & sizing issues for search results.

--- a/src/components/search-result/search-result.scss
+++ b/src/components/search-result/search-result.scss
@@ -2,7 +2,6 @@
 
 .search-result {
     display: flex;
-    width: 100%;
     text-decoration: none;
     padding: 2.5rem;
     align-items: flex-end;
