--- a/src/index.scss
+++ b/src/index.scss
@@ -92,7 +92,10 @@ a {
 .page-wrapper {
   flex-grow: 2;
   padding: 2rem 4rem;
+  margin: 0 auto;
+  width: 100%;
   max-width: $content-width;
+  box-sizing: border-box;
 
   @include small-screen {
     padding: 1rem 2rem;
